<resources>
    <string name="app_name">letgo_302838271_305212946</string>
    <string name="home_btn_txt">Home</string>
    <string name="notification_btn_txt">Notificatios</string>
    <string name="chats_btn_txt">Chats</string>
    <string name="myprofile_btn_txt">My Profile</string>
    <string name="letgo">letgo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_title">Title</string>
    <string name="post_tag">Tag</string>
    <string name="post_content">Post content</string>
    <string name="post_img">Image</string>
    <string name="save_btn_txt">Save</string>
    <string name="take_photo_btn_txt">take photo</string>
    <string name="user_1">user 1</string>
    <string name="user_2">user 2</string>


    <string-array name="tags">
        <item>Cars</item>
        <item>Tech</item>
        <item>Home</item>
        <item>Leisure</item>
        <item>Motors</item>
        <item>Fashion</item>
        <item>Child</item>
        <item>Entertainment</item>
        <item>Other</item>
    </string-array>

    <string-array name="currency">
        <item>ILS</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>

    <string-array name="setting_distance">
        <item>Miles</item>
        <item>Kilometers</item>
    </string-array>
    <string-array name="setting_location">
        <item>Tel-Aviv</item>
        <item>Haifa</item>
        <item>Afula</item>
        <item>Jerusalem</item>
        <item>Nazareth-Illit</item>
        <item>Kfar-Kama</item>
    </string-array>
</resources>
