<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="course.android.letgo_302838271_305212946.fragments.AddPostInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_title"/>
        <EditText
            android:id="@+id/post_title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_tag"/>

        <Spinner
            android:id="@+id/post_tag_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_content"/>
        <EditText
            android:id="@+id/post_content_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_img"/>
        <Button
            android:id="@+id/post_take_photo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/take_photo_btn_txt"/>
        <ImageView
            android:id="@+id/post_img_field"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"

            />

        <Button
            android:id="@+id/bennyBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="CHOOSE"
            />



    </LinearLayout>
    <Button
        android:id="@+id/save_post_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_btn_txt"
        android:layout_gravity="bottom"
        />
</FrameLayout>
