<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="course.android.letgo_302838271_305212946.TestActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">


    </FrameLayout>

    <LinearLayout
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        >

        <Button
            android:id="@+id/home_btn"
            android:text="@string/home_btn_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:background="#f67493"
            android:textColor="#fff"
            />
        <View
            android:layout_width="2dp"
            android:layout_height="2dp"
            android:background="@android:color/black">
        </View>
        <Button
            android:id="@+id/notifications_btn"
            android:text="@string/notification_btn_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:background="#f67493"
            android:textColor="#fff"/>
        <View
            android:layout_width="2dp"
            android:layout_height="2dp">
        </View>
        <ImageButton
            android:id="@+id/camera_btn"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:background="#f67493"
            />
        <View
            android:layout_width="2dp"
            android:layout_height="2dp">
        </View>
        <Button
            android:id="@+id/chats_btn"
            android:text="@string/chats_btn_txt"
            android:layout_gravity="fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#f67493"
            android:textColor="#fff"/>
        <View
            android:layout_width="2dp"
            android:layout_height="2dp">
        </View>
        <Button
            android:id="@+id/myprofile_btn"
            android:text="@string/myprofile_btn_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:background="#f67493"
            android:textColor="#fff"/>



    </LinearLayout>





</LinearLayout>
