<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="course.android.letgo_302838271_305212946.TestActivity">



    <FrameLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff3e6"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:layoutDirection="ltr"
        >


        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:background="#00000000"
            android:onClick="homeOnClick"
            android:src="@drawable/home2"
            android:text="@string/home_btn_txt"
            />

        <View
            android:layout_width="40dp"
            android:layout_height="2dp"></View>

        <ImageButton
            android:id="@+id/notifications_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:background="#00000000"
            android:src="@drawable/notification"
            android:text="@string/notification_btn_txt" />

        <View
            android:layout_width="40dp"
            android:layout_height="2dp"></View>

        <ImageButton
            android:id="@+id/camera_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:background="#00000000"
            android:src="@drawable/camera"


            />

        <View
            android:layout_width="40dp"
            android:layout_height="2dp"></View>

        <ImageButton
            android:id="@+id/chats_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:background="#00000000"
            android:onClick="chatOnClick"
            android:src="@drawable/chat"
            android:text="@string/chats_btn_txt" />

        <View
            android:layout_width="40dp"
            android:layout_height="2dp"></View>

        <ImageButton
            android:id="@+id/myprofile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:background="#00000000"
            android:onClick="proflieOnClick"
            android:src="@drawable/profile"
            android:text="@string/myprofile_btn_txt" />


    </LinearLayout>


</LinearLayout>
